--- a/PositionIn/NewItems/NewItems.storyboard
+++ b/PositionIn/NewItems/NewItems.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
@@ -32,7 +32,7 @@
                     <navigationItem key="navigationItem" title="New Product" id="sFY-2B-Y6p">
                         <barButtonItem key="leftBarButtonItem" title="Cancel" id="j7T-4t-dw1">
                             <connections>
-                                <segue destination="6lO-fr-kHe" kind="unwind" unwindAction="prepareForUnwind:" id="Cam-WD-IHs"/>
+                                <segue destination="6lO-fr-kHe" kind="unwind" identifier="Close" unwindAction="prepareForUnwind:" id="Cam-WD-IHs"/>
                             </connections>
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" title="Post" id="v9k-kv-OcB">
@@ -79,7 +79,7 @@
                     <navigationItem key="navigationItem" title="New Post" id="SqS-4X-I9N">
                         <barButtonItem key="leftBarButtonItem" title="Cancel" id="mtS-TP-bWL">
                             <connections>
-                                <segue destination="Ale-x3-v8m" kind="unwind" unwindAction="prepareForUnwind:" id="qfC-li-TYq"/>
+                                <segue destination="Ale-x3-v8m" kind="unwind" identifier="Close" unwindAction="prepareForUnwind:" id="qfC-li-TYq"/>
                             </connections>
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" title="Post" id="F0j-WI-8AA">
@@ -98,10 +98,10 @@
             </objects>
             <point key="canvasLocation" x="119" y="371"/>
         </scene>
-        <!--New Post-->
+        <!--New Community-->
         <scene sceneID="eaE-Sy-HP3">
             <objects>
-                <viewController storyboardIdentifier="AddCommunityViewController" id="g4f-5s-ruZ" userLabel="New Post" customClass="AddCommunityViewController" customModule="PositionIn" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="AddCommunityViewController" id="g4f-5s-ruZ" userLabel="New Community" customClass="AddCommunityViewController" customModule="PositionIn" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="sE9-RU-SkK"/>
                         <viewControllerLayoutGuide type="bottom" id="mkL-JG-j6h"/>
@@ -126,7 +126,7 @@
                     <navigationItem key="navigationItem" title="New Post" id="RkT-bN-F8N">
                         <barButtonItem key="leftBarButtonItem" title="Cancel" id="NP2-Ah-S0h">
                             <connections>
-                                <segue destination="D7f-X0-Oo6" kind="unwind" unwindAction="prepareForUnwind:" id="2Ze-E2-O9I"/>
+                                <segue destination="D7f-X0-Oo6" kind="unwind" identifier="Close" unwindAction="prepareForUnwind:" id="2Ze-E2-O9I"/>
                             </connections>
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" title="Post" id="209-eh-SGh">
@@ -173,7 +173,7 @@
                     <navigationItem key="navigationItem" title="New Promotion" id="vgd-Be-vbf">
                         <barButtonItem key="leftBarButtonItem" title="Cancel" id="H9W-Kr-8Eb">
                             <connections>
-                                <segue destination="ZbV-uT-dT6" kind="unwind" unwindAction="prepareForUnwind:" id="uFR-G3-s5a"/>
+                                <segue destination="ZbV-uT-dT6" kind="unwind" identifier="Close" unwindAction="prepareForUnwind:" id="uFR-G3-s5a"/>
                             </connections>
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" title="Post" id="O5s-DU-Gs4">
@@ -220,7 +220,7 @@
                     <navigationItem key="navigationItem" title="New Event" id="tPF-w0-6Vv">
                         <barButtonItem key="leftBarButtonItem" title="Cancel" id="0CB-cJ-dru">
                             <connections>
-                                <segue destination="ltf-3h-gpn" kind="unwind" unwindAction="prepareForUnwind:" id="TjO-Vt-RhX"/>
+                                <segue destination="ltf-3h-gpn" kind="unwind" identifier="Close" unwindAction="prepareForUnwind:" id="TjO-Vt-RhX"/>
                             </connections>
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" title="Post" id="eAM-1O-gnT">
