--- a/PositionIn/Login/Login.storyboard
+++ b/PositionIn/Login/Login.storyboard
@@ -43,7 +43,7 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LoginBg" translatesAutoresizingMaskIntoConstraints="NO" id="yjS-rx-vbs">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
                             </imageView>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BT1-Fz-1Vn">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BT1-Fz-1Vn">
                                 <rect key="frame" x="30" y="69" width="540" height="429"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QF7-vR-jeG">
@@ -162,7 +162,9 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="facebookButton" destination="dXR-k3-5rQ" id="agC-Sd-QEg"/>
                         <outlet property="loginButton" destination="ugW-zo-uTv" id="iQb-hT-rkC"/>
+                        <outlet property="signupButton" destination="aXa-R3-BMg" id="8hH-n5-gHb"/>
                         <segue destination="cOZ-SQ-Q1c" kind="show" identifier="LoginSegueId" id="ax9-Ma-kqU"/>
                     </connections>
                 </viewController>
@@ -453,7 +455,7 @@
                                                 </state>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3yP-kR-Kvh">
-                                                <rect key="frame" x="0.0" y="347" width="540" height="45"/>
+                                                <rect key="frame" x="0.0" y="348" width="540" height="45"/>
                                                 <color key="backgroundColor" red="1" green="0.73333333329999995" blue="0.31764705879999999" alpha="1" colorSpace="calibratedRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="45" id="0JN-Ls-2Uh"/>
@@ -470,42 +472,54 @@
                                                     </mask>
                                                 </variation>
                                             </button>
-                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Email" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nUB-yS-bQO">
+                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nUB-yS-bQO">
                                                 <rect key="frame" x="36" y="215" width="504" height="19"/>
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="16"/>
                                                 <textInputTraits key="textInputTraits"/>
+                                                <userDefinedRuntimeAttributes>
+                                                    <userDefinedRuntimeAttribute type="color" keyPath="_placeholderLabel.textColor">
+                                                        <color key="value" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                    </userDefinedRuntimeAttribute>
+                                                </userDefinedRuntimeAttributes>
                                             </textField>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LoginEmailIcon" translatesAutoresizingMaskIntoConstraints="NO" id="sdF-rq-WSF">
-                                                <rect key="frame" x="9" y="217" width="19" height="18"/>
+                                                <rect key="frame" x="9" y="216" width="20" height="21"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="height" constant="18" id="ZrR-s9-shP"/>
-                                                    <constraint firstAttribute="width" constant="19" id="afW-8T-Ln8"/>
+                                                    <constraint firstAttribute="height" constant="21" id="ZrR-s9-shP"/>
+                                                    <constraint firstAttribute="width" constant="20" id="afW-8T-Ln8"/>
                                                 </constraints>
                                             </imageView>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eHK-OG-WAI">
-                                                <rect key="frame" x="9" y="244" width="531" height="1"/>
+                                                <rect key="frame" x="9" y="245" width="531" height="1"/>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="1" id="1Yx-Zq-hAq"/>
                                                 </constraints>
                                             </view>
-                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dtP-Xu-Y0i">
+                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dtP-Xu-Y0i">
                                                 <rect key="frame" x="36" y="274" width="504" height="19"/>
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="19" id="iJZ-Ek-dYN"/>
                                                 </constraints>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="16"/>
-                                                <textInputTraits key="textInputTraits"/>
+                                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                                                <userDefinedRuntimeAttributes>
+                                                    <userDefinedRuntimeAttribute type="color" keyPath="_placeholderLabel.textColor">
+                                                        <color key="value" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                    </userDefinedRuntimeAttribute>
+                                                </userDefinedRuntimeAttributes>
                                             </textField>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LoginLockIcon" translatesAutoresizingMaskIntoConstraints="NO" id="Mtp-jW-qE6">
-                                                <rect key="frame" x="10" y="274" width="20" height="20"/>
+                                                <rect key="frame" x="10" y="275" width="21" height="21"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="width" constant="20" id="02a-mn-oX1"/>
-                                                    <constraint firstAttribute="height" constant="20" id="ILs-xg-rAi"/>
+                                                    <constraint firstAttribute="width" constant="21" id="02a-mn-oX1"/>
+                                                    <constraint firstAttribute="height" constant="21" id="ILs-xg-rAi"/>
                                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="16" id="X3m-kL-OeA"/>
                                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="19" id="tXz-aG-pFp"/>
                                                 </constraints>
@@ -517,7 +531,7 @@
                                                 </variation>
                                             </imageView>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qMW-n2-USa">
-                                                <rect key="frame" x="9" y="304" width="531" height="1"/>
+                                                <rect key="frame" x="9" y="305" width="531" height="1"/>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="1" id="MU5-sH-VQX"/>
@@ -525,7 +539,7 @@
                                                 </constraints>
                                             </view>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2E3-ia-pQI">
-                                                <rect key="frame" x="0.0" y="399" width="540" height="30"/>
+                                                <rect key="frame" x="0.0" y="401" width="540" height="30"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="30" id="TPQ-Og-l9d"/>
                                                 </constraints>
@@ -540,9 +554,9 @@
                                         <constraints>
                                             <constraint firstItem="nUB-yS-bQO" firstAttribute="top" secondItem="IvJ-ul-Oh0" secondAttribute="bottom" constant="41" id="0Z6-Gy-Bkc"/>
                                             <constraint firstItem="eHK-OG-WAI" firstAttribute="leading" secondItem="bIC-Jp-AHT" secondAttribute="leading" constant="9" id="1F8-UI-Xun"/>
-                                            <constraint firstItem="dtP-Xu-Y0i" firstAttribute="leading" secondItem="Mtp-jW-qE6" secondAttribute="trailing" constant="6" id="2rR-Dq-5gc"/>
+                                            <constraint firstItem="dtP-Xu-Y0i" firstAttribute="leading" secondItem="Mtp-jW-qE6" secondAttribute="trailing" constant="5" id="2rR-Dq-5gc"/>
                                             <constraint firstAttribute="trailing" secondItem="IvJ-ul-Oh0" secondAttribute="trailing" id="6G3-Pg-h50"/>
-                                            <constraint firstItem="dtP-Xu-Y0i" firstAttribute="top" secondItem="eHK-OG-WAI" secondAttribute="bottom" constant="29" id="7Kb-z7-8tR"/>
+                                            <constraint firstItem="dtP-Xu-Y0i" firstAttribute="top" secondItem="eHK-OG-WAI" secondAttribute="bottom" constant="28" id="7Kb-z7-8tR"/>
                                             <constraint firstItem="2E3-ia-pQI" firstAttribute="leading" secondItem="3yP-kR-Kvh" secondAttribute="leading" id="8sT-qf-jJG"/>
                                             <constraint firstItem="Mtp-jW-qE6" firstAttribute="top" secondItem="eHK-OG-WAI" secondAttribute="bottom" constant="29" id="8vu-Rz-hJJ"/>
                                             <constraint firstItem="TS8-7W-Dri" firstAttribute="top" secondItem="bIC-Jp-AHT" secondAttribute="top" id="Bw2-0m-NGt"/>
@@ -556,19 +570,19 @@
                                             <constraint firstAttribute="trailing" secondItem="3yP-kR-Kvh" secondAttribute="trailing" id="WoP-vd-Jjs"/>
                                             <constraint firstItem="TS8-7W-Dri" firstAttribute="leading" secondItem="bIC-Jp-AHT" secondAttribute="leading" id="X9f-hd-qWT"/>
                                             <constraint firstAttribute="trailing" secondItem="dtP-Xu-Y0i" secondAttribute="trailing" id="YVu-w4-1JB"/>
-                                            <constraint firstItem="qMW-n2-USa" firstAttribute="top" secondItem="dtP-Xu-Y0i" secondAttribute="bottom" constant="11" id="acr-QX-RjE"/>
+                                            <constraint firstItem="qMW-n2-USa" firstAttribute="top" secondItem="dtP-Xu-Y0i" secondAttribute="bottom" constant="12" id="acr-QX-RjE"/>
                                             <constraint firstItem="qMW-n2-USa" firstAttribute="top" secondItem="dtP-Xu-Y0i" secondAttribute="bottom" constant="7" id="e9f-bB-AyB"/>
                                             <constraint firstItem="3yP-kR-Kvh" firstAttribute="leading" secondItem="bIC-Jp-AHT" secondAttribute="leading" id="f2k-4q-xRo"/>
                                             <constraint firstAttribute="trailing" secondItem="eHK-OG-WAI" secondAttribute="trailing" id="fGw-xB-czx"/>
                                             <constraint firstItem="3yP-kR-Kvh" firstAttribute="leading" secondItem="bIC-Jp-AHT" secondAttribute="leading" id="flv-r9-KZ1"/>
-                                            <constraint firstItem="eHK-OG-WAI" firstAttribute="top" secondItem="nUB-yS-bQO" secondAttribute="bottom" constant="10" id="hdX-iK-eFw"/>
+                                            <constraint firstItem="eHK-OG-WAI" firstAttribute="top" secondItem="nUB-yS-bQO" secondAttribute="bottom" constant="11" id="hdX-iK-eFw"/>
                                             <constraint firstItem="qMW-n2-USa" firstAttribute="leading" secondItem="bIC-Jp-AHT" secondAttribute="leading" constant="9" id="hhK-Hm-myq"/>
                                             <constraint firstAttribute="centerX" secondItem="TS8-7W-Dri" secondAttribute="centerX" id="iTb-BJ-D3Z"/>
                                             <constraint firstItem="IvJ-ul-Oh0" firstAttribute="top" secondItem="TS8-7W-Dri" secondAttribute="bottom" constant="26" id="jyh-jE-pjG"/>
-                                            <constraint firstItem="2E3-ia-pQI" firstAttribute="top" secondItem="3yP-kR-Kvh" secondAttribute="bottom" constant="7" id="k7P-hw-ALi"/>
+                                            <constraint firstItem="2E3-ia-pQI" firstAttribute="top" secondItem="3yP-kR-Kvh" secondAttribute="bottom" constant="8" id="k7P-hw-ALi"/>
                                             <constraint firstAttribute="trailing" secondItem="nUB-yS-bQO" secondAttribute="trailing" id="prm-h6-TyY"/>
                                             <constraint firstItem="Mtp-jW-qE6" firstAttribute="leading" secondItem="bIC-Jp-AHT" secondAttribute="leading" constant="10" id="qRL-RD-tXL"/>
-                                            <constraint firstItem="sdF-rq-WSF" firstAttribute="top" secondItem="IvJ-ul-Oh0" secondAttribute="bottom" constant="43" id="s2z-aX-xTa"/>
+                                            <constraint firstItem="sdF-rq-WSF" firstAttribute="top" secondItem="IvJ-ul-Oh0" secondAttribute="bottom" constant="42" id="s2z-aX-xTa"/>
                                             <constraint firstItem="3yP-kR-Kvh" firstAttribute="top" secondItem="qMW-n2-USa" secondAttribute="bottom" constant="42" id="sjF-da-4VE"/>
                                             <constraint firstItem="2E3-ia-pQI" firstAttribute="trailing" secondItem="3yP-kR-Kvh" secondAttribute="trailing" id="wU2-tU-zXM"/>
                                             <constraint firstAttribute="trailing" secondItem="qMW-n2-USa" secondAttribute="trailing" id="zH8-Fu-cgd"/>
@@ -628,6 +642,7 @@
                     </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
+                        <outlet property="facebookButton" destination="IvJ-ul-Oh0" id="Z68-Ag-p95"/>
                         <outlet property="loginButton" destination="3yP-kR-Kvh" id="TBo-H0-lGJ"/>
                         <outlet property="passwordTextField" destination="dtP-Xu-Y0i" id="rdq-5b-M6t"/>
                         <outlet property="scrollView" destination="prw-Bu-zJJ" id="kno-6T-3ik"/>
