--- a/PositionIn/Base.lproj/Main.storyboard
+++ b/PositionIn/Base.lproj/Main.storyboard
@@ -675,6 +675,25 @@
             </objects>
             <point key="canvasLocation" x="-970" y="329"/>
         </scene>
+        <!--User Profile View Controller-->
+        <scene sceneID="arf-ux-nM0">
+            <objects>
+                <viewController storyboardIdentifier="UserProfileViewController" id="2Iu-6t-chL" customClass="UserProfileViewController" customModule="PositionIn" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="PTl-ox-TtU"/>
+                        <viewControllerLayoutGuide type="bottom" id="uYr-ph-THO"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="HNT-o2-aLn">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="93a-Ey-Qr8"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mSi-Z8-bxF" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2241" y="192"/>
+        </scene>
         <!--My Profile Navigation Controller Scene-->
         <scene sceneID="3kT-1q-vQU">
             <objects>
@@ -690,7 +709,7 @@
                         </textAttributes>
                     </navigationBar>
                     <connections>
-                        <segue destination="7kZ-Mg-mwO" kind="relationship" relationship="rootViewController" id="Fjb-QX-aaB"/>
+                        <segue destination="2Iu-6t-chL" kind="relationship" relationship="rootViewController" id="Y2f-e6-GbJ"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HGP-Kq-gVd" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -706,7 +725,7 @@
                         <viewControllerLayoutGuide type="bottom" id="wLg-6T-9w3"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="MZb-2I-LIG">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
+                        <rect key="frame" x="0.0" y="64" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
@@ -737,11 +756,11 @@
                         <viewControllerLayoutGuide type="bottom" id="aqc-PM-S0r"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="vDg-jS-1vU">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
+                        <rect key="frame" x="0.0" y="64" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="jzX-JK-7uD" customClass="TableView" customModule="PosInCore">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </tableView>
                         </subviews>
